--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,11 +1,11 @@
 .input {
   display: flex;
-  width: 90%;
+  width: 95%;
   position: relative;
   align-items: center;
 }
 
-.input_box {
+.input__box {
   width: 100%;
   border-radius: 50px;
   padding: 20px 30px;
@@ -15,8 +15,8 @@
   box-shadow: inset 0 0 5px black;
 }
 
-.input_box:focus {
-  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.2);
+.input__box:focus {
+  box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.5);
   outline: none;
 }
 
@@ -31,17 +31,25 @@
   font-size: 15px;
   background-color: #2f74c0;
   color: white;
-  transition: 0.2 all;
+  transition: 0.2s all;
   box-shadow: 0 0 10px black;
 }
 
 .input_submit:hover {
-  background-color: aliceblue;
+  background-color: #388ae2;
 }
 
 .input_submit:active {
   transform: scale(0.8);
   box-shadow: 0 0 5px black;
+}
+
+.container {
+  width: 95%;
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .todos {
@@ -53,16 +61,44 @@
   background-color: rgb(50, 195, 205);
 }
 
+.dragactive {
+  background-color: rgb(0, 221, 236);
+}
+
+.dragcomplete {
+  background-color: rgb(255, 38, 0);
+}
+
+.remove {
+  background-color: rgb(235, 103, 80);
+}
+
+.todos__heading {
+  font-size: 30px;
+  /* text-align: center; */
+  color: white;
+}
+
 .todos__single {
   display: flex;
-  width: 29.5%;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
   background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  transition: 0.2s;
 }
+
+.drag {
+  box-shadow: 0 0 20px black;
+}
+
+.todos__single:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.03);
+}
+
 .todos__single--text {
-  flex: 1; /* with this 1, we get full space and push other components to the other side */
+  flex: 1;
   padding: 5px;
   border: none;
   font-size: 20px;
@@ -73,25 +109,27 @@
 }
 
 .icon {
-margin-left: 10px;
-font-size: 25px;
-cursor: pointer;
+  margin-left: 10px;
+  font-size: 25px;
+  cursor: pointer;
 }
 
-@media (max-width: 1200px) {
-.todos__single {
-  width: 40%;
-}
+@media (max-width: 1100px) {
+  .todos {
+    width: 45%;
+  }
 }
 
 @media (max-width: 700px) {
-.input {
-  width: 95%;
-}
-.todos {
-  width: 95%;
-}
-.todos__single {
-  width: 100%;
-}
+  .input {
+    width: 95%;
+  }
+  .container {
+    width: 95%;
+    flex-direction: column;
+  }
+  .todos {
+    width: 95%;
+    margin-bottom: 10px;
+  }
 }
